router name component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -14,5 +14,5 @@
   </mat-toolbar-row>
 </mat-toolbar>
 <header class="docs-primary-header component-page-header">
-  <h2>Name Component</h2>
+  <h2> {{ componentName }} </h2>
 </header>
