--- a/src/app/components/poke-list/poke-list.component.html
+++ b/src/app/components/poke-list/poke-list.component.html
@@ -1,5 +1,14 @@
 <div class="container">
   <div class="content">
+    <div class="filter">
+      <mat-form-field>
+        <mat-label>Search Pokémon</mat-label>
+        <mat-select [(ngModel)]="selectedValue" name="pokemon" (selectionChange)="onPokemonSelectionChange()">
+          <mat-option *ngFor="let poke of pokeList" [value]="poke.name">{{ poke.name }}</mat-option>
+        </mat-select>
+      </mat-form-field>
+      <button class="reset-button" mat-raised-button color="primary" (click)="reloadPokemonList()">Reset</button>
+    </div>
     <mat-paginator 
       [length]="totalPokemons.length"
       [pageSize]="30"
@@ -8,15 +17,6 @@
       (page)="onPageChange($event)"
       aria-label="Select page">
     </mat-paginator>
-    <div class="filter">
-      <mat-form-field>
-        <mat-label>Search specific pokemon</mat-label>
-        <mat-select [(ngModel)]="selectedValue" name="pokemon" (selectionChange)="onPokemonSelectionChange()">
-          <mat-option *ngFor="let poke of pokeList" [value]="poke.name">{{ poke.name }}</mat-option>
-        </mat-select>
-      </mat-form-field>
-      <button mat-button (click)="reloadPokemonList()">Reload Pokemon List</button>
-    </div>
     @for (pokemon of pokemonList; track pokemon) {
       <mat-card class="example-card"
         [ngStyle]="{ 'background': getColorForType(pokemon.types[0].type.name) }"
