media querie move list

--- a/src/app/components/move-list/move-list.component.css
+++ b/src/app/components/move-list/move-list.component.css
@@ -50,6 +50,13 @@ p {
     }
   }
 
+@media (max-width: 640px) {
+    .content {
+        width: calc(100% - 4%);
+        margin: 2%;
+    }
+}
+
 @media (max-width: 540px) {
     .content {
         width: calc(100% - 4%);
