--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,7 @@
       <a routerLink="/pokedex"><img class="logo" src="../../../assets/pokeapi_logo.png" alt="Icone site"></a>
     </button>
     <span><a routerLink="/pokedex">Pokedex</a></span>
-    <span><a routerLink="/moves">Move</a></span>
+    <span><a routerLink="/moves">Moves</a></span>
     <span class="example-spacer"></span>
     <a href="https://github.com/Diagnoster/pokeapi-angular">
       <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
