--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,6 +5,7 @@
     </button>
     <span><a routerLink="/pokedex">Pokedex</a></span>
     <span><a routerLink="/moves">Moves</a></span>
+    <span><a routerLink="/items">Items</a></span>
     <span class="example-spacer"></span>
     <a href="https://github.com/Diagnoster/pokeapi-angular">
       <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
