--- a/src/app/components/item-list/item-list.component.html
+++ b/src/app/components/item-list/item-list.component.html
@@ -7,7 +7,7 @@
     <p>Loading...</p>
     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
     }
-    <button mat-raised-button color="primary" [matMenuTriggerFor]="items">Items</button>
+    <button class="main-button" mat-raised-button color="primary" [matMenuTriggerFor]="items">Items</button>
     <mat-menu #items="matMenu">
       <button mat-menu-item [matMenuTriggerFor]="pocket">Pocket Items</button>
     </mat-menu>
@@ -73,7 +73,7 @@
       <button mat-menu-item (click)="selectItem('item-category/46/')">Z Crystals</button>
     </mat-menu>
 
-    
+
     <mat-menu #misc="matMenu">
       <button mat-menu-item (click)="selectItem('item-category/9/')">Collectibles</button>
       <button mat-menu-item (click)="selectItem('item-category/10/')">Evolution</button>
@@ -102,34 +102,72 @@
       <button mat-menu-item (click)="selectItem('item-category/55/')">Picnic</button>
     </mat-menu>
 
+    <!-- Filter -->
     <mat-form-field>
       <mat-label>Filter</mat-label>
       <input matInput (keyup)="applyFilter($event)" placeholder="Filter a movement from the list" #input>
     </mat-form-field>
-    <table class="table-move mat-elevation-z8" mat-table [dataSource]="dataSource">
+
+    <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let item"> {{ item.id }} </td>
+      </ng-container>
+
       <!-- Sprite Column -->
       <ng-container matColumnDef="sprite">
         <th mat-header-cell *matHeaderCellDef>Sprite</th>
         <td mat-cell *matCellDef="let item"> <img [src]="item.sprites.default"> </td>
-      </ng-container> 
+      </ng-container>
+
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
         <td mat-cell *matCellDef="let item"> {{ item.name }} </td>
       </ng-container>
+
       <!-- Cost Column -->
       <ng-container matColumnDef="cost">
         <th mat-header-cell *matHeaderCellDef>Cost</th>
         <td mat-cell *matCellDef="let item"> {{ item.cost }} </td>
       </ng-container>
-      <!-- Effect Column -->
-      <ng-container matColumnDef="effect_entries">
-        <th mat-header-cell *matHeaderCellDef>Effect</th>
-        <td mat-cell *matCellDef="let item"> {{ item.effect_entries.effect }} </td>
+
+      <!-- Expand Column-->
+      <ng-container matColumnDef="expand">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let item">
+          <button mat-icon-button aria-label="expand row" (click)="(expandedElement = expandedElement === item ? null : item); $event.stopPropagation()">
+            @if (expandedElement === item) {
+              <mat-icon>keyboard_arrow_up</mat-icon>
+            } @else {
+              <mat-icon>keyboard_arrow_down</mat-icon>
+            }
+          </button>
+        </td>
       </ng-container>
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+      <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
+      <ng-container matColumnDef="expandedDetail">
+        <td mat-cell *matCellDef="let item" [attr.colspan]="displayedColumns.length">
+          <div class="example-element-detail" [@detailExpand]="item == expandedElement ? 'expanded' : 'collapsed'">
+            <div class="example-element-description">
+              @for (effect of item.effect_entries; track effect) {
+                <span class="example-element-description-attribution"> {{effect.effect}} </span>
+              }
+            </div>
+          </div>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="columnsToDisplayWithExpand"></tr>
+      <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand;" class="example-element-row"
+        [class.example-expanded-row]="expandedElement === element"
+        (click)="expandedElement = expandedElement === element ? null : element">
+      </tr>
+      <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
     </table>
+
     <mat-paginator [length]="dataSource.data.length" [pageSizeOptions]="[10]" showFirstLastButtons
       aria-label="Select page of moves">
     </mat-paginator>
