--- a/src/app/components/move-list/move-list.component.html
+++ b/src/app/components/move-list/move-list.component.html
@@ -2,49 +2,62 @@
   <div class="content">
     @if (loading) {
     <div class="loading">
-      <img class="pokeball pokeball-spinner" src="../../../assets/pokeball.png" alt="pokeball">
+      <img class="pokeball pokeball-spinner" src="../../../assets/pokeball.png" alt="pokeball" />
     </div>
     <p>Loading...</p>
     <mat-progress-bar mode="indeterminate"></mat-progress-bar>
     }
+
+    <!-- Filter -->
     <mat-form-field>
       <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Filter a movement from the list" #input>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Filter a movement from the list" #input />
     </mat-form-field>
+
     <table class="table-move mat-elevation-z8" mat-table [dataSource]="dataSource" multiTemplateDataRows>
       <!-- Name Column -->
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let move"> {{ upperFirstLetter(move.name) }} </td>
+        <td mat-cell *matCellDef="let move">
+          {{ upperFirstLetter(move.name) }}
+        </td>
       </ng-container>
+      
       <!-- Type Column -->
       <ng-container matColumnDef="type">
         <th mat-header-cell *matHeaderCellDef>Type</th>
-        <td mat-cell *matCellDef="let move"><img [src]="getTypeRetroImageUrl(move.type.name)" alt="Tipo do Pokémon">
+        <td mat-cell *matCellDef="let move">
+          <img [src]="getTypeRetroImageUrl(move.type.name)" alt="Tipo do Pokémon" />
         </td>
       </ng-container>
+      
       <!-- Power Column -->
       <ng-container matColumnDef="power">
         <th mat-header-cell *matHeaderCellDef>Power</th>
-        <td mat-cell *matCellDef="let move"> {{ move.power }} </td>
+        <td mat-cell *matCellDef="let move">{{ move.power }}</td>
       </ng-container>
+      
       <!-- Accuracy Column -->
       <ng-container matColumnDef="accuracy">
         <th mat-header-cell *matHeaderCellDef>Accuracy</th>
-        <td mat-cell *matCellDef="let move"> {{ move.accuracy }} </td>
+        <td mat-cell *matCellDef="let move">{{ move.accuracy }}</td>
       </ng-container>
+      
       <!-- PP Column -->
       <ng-container matColumnDef="pp">
         <th mat-header-cell *matHeaderCellDef>PP</th>
-        <td mat-cell *matCellDef="let move"> {{ move.pp }} </td>
+        <td mat-cell *matCellDef="let move">{{ move.pp }}</td>
       </ng-container>
+      
       <!-- Expand Column-->
       <ng-container matColumnDef="expand">
         <th mat-header-cell *matHeaderCellDef></th>
-        <td mat-cell *matCellDef="let item">
-          <button mat-icon-button aria-label="expand row"
-            (click)="(expandedElement = expandedElement === item ? null : item); $event.stopPropagation()">
-            @if (expandedElement === item) {
+        <td mat-cell *matCellDef="let move">
+          <button mat-icon-button aria-label="expand row" (click)="
+              expandedElement = expandedElement === move ? null : move;
+              $event.stopPropagation()
+            ">
+            @if (expandedElement === move) {
             <mat-icon>keyboard_arrow_up</mat-icon>
             } @else {
             <mat-icon>keyboard_arrow_down</mat-icon>
@@ -55,12 +68,14 @@
 
       <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
       <ng-container matColumnDef="expandedDetail">
-        <td mat-cell *matCellDef="let item" [attr.colspan]="displayedColumns.length">
-          <div class="example-element-detail" [@detailExpand]="item == expandedElement ? 'expanded' : 'collapsed'">
-            ID: {{ item.id }}
+        <td mat-cell *matCellDef="let move" [attr.colspan]="displayedColumns.length">
+          <div class="example-element-detail" [@detailExpand]="move == expandedElement ? 'expanded' : 'collapsed'">
+            ID: {{ move.id }}
             <div class="example-element-description">
-              @for (effect of item.effect_entries; track effect) {
-              <span class="example-element-description-attribution"> {{effect.effect}} </span>
+              @for (effect of move.effect_entries; track effect) {
+              <span class="example-element-description-attribution">
+                {{ effect.effect }}
+              </span>
               }
             </div>
           </div>
@@ -68,10 +83,9 @@
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand;" class="example-element-row"
+      <tr mat-row *matRowDef="let element; columns: columnsToDisplayWithExpand" class="example-element-row"
         [class.example-expanded-row]="expandedElement === element"
-        (click)="expandedElement = expandedElement === element ? null : element">
-      </tr>
+        (click)="expandedElement = expandedElement === element ? null : element"></tr>
       <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
     </table>
     <mat-paginator [length]="dataSource.data.length" [pageSizeOptions]="[10]" showFirstLastButtons
