--- a/src/app/components/poke-list/poke-list.component.css
+++ b/src/app/components/poke-list/poke-list.component.css
@@ -42,6 +42,12 @@
   justify-content: center;
 }
 
+.pokeball {
+  width: 100px;
+  height: 100px;
+  margin-bottom: 1em;
+}
+
 mat-form-field {
   width: 40%;
 }
@@ -57,8 +63,19 @@ mat-paginator {
   margin-left: 1%;
 }
 
+.loading {
+  justify-content: center;
+  display: flex;
+  font-weight: bold;
+}
+
 mat-card-subtitle {
   text-align: left;
+}
+
+/* Spinner pokeball */
+.pokeball-spinner {
+  animation: spin 3s infinite linear;
 }
 
 @media (max-width: 1000px) {
