--- a/src/app/components/poke-list/poke-list.component.html
+++ b/src/app/components/poke-list/poke-list.component.html
@@ -1,6 +1,20 @@
 <div class="container">
   <div class="content">
+    @if (loading) {
+      <div class="loading">
+        <img class="pokeball pokeball-spinner" src="../../../assets/pokeball.png" alt="pokeball" />
+      </div>
+      <p>Loading...</p>
+      <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+    }
     <div class="filter">
+      <mat-form-field>
+        <mat-label>Filter</mat-label>
+        <input matInput 
+          (keyup)="applyFilter($event)" 
+          placeholder="Filter a movement from the list" 
+          #input />
+      </mat-form-field>
       <mat-form-field>
         <mat-label>Search Pokémon</mat-label>
         <mat-select [(ngModel)]="selectedValue" name="pokemon" (selectionChange)="onPokemonSelectionChange()">
@@ -9,14 +23,6 @@
       </mat-form-field>
       <button class="reset-button" mat-raised-button color="primary" (click)="reloadPokemonList()">Reset</button>
     </div>
-    <mat-paginator 
-      [length]="totalPokemons.length"
-      [pageSize]="30"
-      [pageSizeOptions]="[30]"
-      showFirstLastButtons
-      (page)="onPageChange($event)"
-      aria-label="Select page">
-    </mat-paginator>
     @for (pokemon of pokemonList; track pokemon) {
       <mat-card class="example-card"
         [ngStyle]="{ 'background': getColorForType(pokemon.types[0].type.name) }"
