--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,6 +3,7 @@
     <button mat-button class="example-icon" aria-label="Example icon-button with menu icon">
       <a routerLink="/pokedex"><img class="logo" src="../../../assets/pokeapi_logo.png" alt="Icone site"></a>
     </button>
+    <span><a routerLink="/home">Home</a></span>
     <span><a routerLink="/pokedex">Pokedex</a></span>
     <span><a routerLink="/moves">Moves</a></span>
     <span><a routerLink="/items">Items</a></span>
