clean and background color

--- a/src/app/components/abilities-details/abilities-details.component.html
+++ b/src/app/components/abilities-details/abilities-details.component.html
@@ -1,5 +1,5 @@
 @for (ab of ability; track ab) {
-  <mat-card class="example-card">
+  <mat-card class="abilities-card">
     <mat-card-header>
       <mat-card-title> {{ upperFirstLetter(ab.name) }} </mat-card-title>
       <mat-card-subtitle>
