--- a/src/styles.css
+++ b/src/styles.css
@@ -10,5 +10,6 @@ body {
     background-image: url("assets/pokerealmap_op.png");
     background-repeat: no-repeat;
     background-size: cover;
+    background-color: #CBDFF0;
 }
 
