--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,14 +1,11 @@
 <div class="container">
     @for (option of card; track option) {
-        <mat-card class="example-card" [routerLink]="option.route">
+        <mat-card class="home-card" [routerLink]="option.route">
             <mat-card-header>
                 <mat-card-title>{{option.title}}</mat-card-title>
             </mat-card-header>
             <img mat-card-image src="{{option.image}}" alt="{{option.title}}" />
             <mat-card-content>
-            <p>
-                {{option.description}}
-            </p>
             </mat-card-content>
         </mat-card>
     }
