animation poke-list

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar #toolbar>
   <mat-toolbar-row class="main-header">
     <button mat-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <a routerLink="/pokedex"><img class="logo" src="../../../assets/pokeapi_logo.png" alt="Icone site"></a>
+      <a routerLink="/home"><img class="logo" src="../../../assets/pokeapi_logo.png" alt="Icone site"></a>
     </button>
     <span><a routerLink="/home">Home</a></span>
     <span><a routerLink="/pokedex">Pokedex</a></span>
