--- a/src/app/components/item-list/item-list.component.html
+++ b/src/app/components/item-list/item-list.component.html
@@ -105,7 +105,7 @@
     <!-- Filter -->
     <mat-form-field>
       <mat-label>Filter</mat-label>
-      <input matInput (keyup)="applyFilter($event)" placeholder="Filter a movement from the list" #input>
+      <input matInput (keyup)="applyFilter($event)" placeholder="Filter an item from the list" #input>
     </mat-form-field>
 
     <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="mat-elevation-z8">
